--- a/guide.html
+++ b/guide.html
@@ -11,9 +11,12 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 20px;
+            font-size: 18px;
+            text-align: justify;
         }
         h1, h2, h3, h4, h5, h6 {
             color: #e9e9e9;
+            font-size: 30px;
         }
         code {
             background-color: #333;
@@ -21,6 +24,7 @@
             border-radius: 4px;
             font-size: medium;
             font-family: monospace;
+            font-size: 18px;
         }
         ul, ol {
             margin-left: 20px;
@@ -31,10 +35,12 @@
 <h1>Prayer Times Widget (iOS Only)</h1>
 <p>A Scriptable widget for iOS/macOS that displays Islamic prayer times based on your current location. The widget fetches real-time prayer times from the Aladhan API and caches data locally for offline access.</p>
 <h2>Overview</h2>
-<p>This script creates responsive widgets in three sizes:
-- <strong>Small</strong>: Prayer times list and Next prayer name
-- <strong>Medium</strong>: Prayer times list and time until next prayer
-- <strong>Lockscreen</strong>: Next prayer name and time only</p>
+<p>This script creates responsive widgets in three sizes:</p>
+<ul>
+<li><strong>Small</strong>: Prayer times list and Next prayer name</li>
+<li><strong>Medium</strong>: Prayer times list and time until next prayer</li>
+<li><strong>Lockscreen</strong>: Next prayer name and time only</li>
+</ul>
 <h2>Features</h2>
 <ul>
 <li><strong>Location-based</strong>: Automatically detects your current location</li>
@@ -45,58 +51,79 @@
 <h2>Main Functions</h2>
 <h3>Widget Creation</h3>
 <h4><code>updateScript(hasGoodInternet)</code></h4>
-<p>Pulls the lates version of the script from github
-- <strong>Input</strong>: Variable that tells the function whether there is an internet connection
-- <strong>Output</strong>: Update Status (success/error)</p>
+<p>Pulls the lates version of the script from github</p>
+<ul>
+<li><strong>Input</strong>: Variable that tells the function whether there is an internet connection</li>
+<li><strong>Output</strong>: Update Status (success/error)</li>
+</ul>
 <h4><code>createSmallWidget(timings)</code></h4>
-<p>Creates a medium-sized widget displaying all prayer times in a clean list format.
-- <strong>Input</strong>: Object with prayer names and times
-- <strong>Output</strong>: ListWidget with prayer times, and next prayer name</p>
+<p>Creates a medium-sized widget displaying all prayer times in a clean list format.</p>
+<ul>
+<li><strong>Input</strong>: Object with prayer names and times</li>
+<li><strong>Output</strong>: ListWidget with prayer times, and next prayer name</li>
+</ul>
 <h4><code>createMediumWidget(timings)</code></h4>
-<p>Creates a medium-sized widget displaying all prayer times in a clean list format.
-- <strong>Input</strong>: Object with prayer names and times
-- <strong>Output</strong>: ListWidget with prayer times, and time until next prayer</p>
+<p>Creates a medium-sized widget displaying all prayer times in a clean list format.</p>
+<ul>
+<li><strong>Input</strong>: Object with prayer names and times</li>
+<li><strong>Output</strong>: ListWidget with prayer times, and time until next prayer</li>
+</ul>
 <h4><code>createLockscreenWidget(timings)</code></h4>
-<p>Creates a lockscreen widget showing only the next prayer and its time.
-- <strong>Input</strong>: Object with next prayer information
-- <strong>Output</strong>: Compact ListWidget for lockscreen</p>
+<p>Creates a lockscreen widget showing only the next prayer and its time.</p>
+<ul>
+<li><strong>Input</strong>: Object with next prayer information</li>
+<li><strong>Output</strong>: Compact ListWidget for lockscreen</li>
+</ul>
 <h4><code>createWidget(timings)</code></h4>
 <p>Main function that creates the appropriate widget based on <code>config.widgetFamily</code>.</p>
 <h3>Time Management</h3>
 <h4><code>formatPrayerTimes(timings)</code></h4>
-<p>Converts 24-hour prayer times from the API to 12-hour format with AM/PM.
-- Handles all 7 prayer times: Fajr, Sunrise, Dhuhr, Asr, Maghrib, Isha, Midnight
-- <strong>Returns</strong>: Object with formatted times (e.g., "5:30 AM")</p>
+<p>Converts 24-hour prayer times from the API to 12-hour format with AM/PM.</p>
+<ul>
+<li>Handles all 7 prayer times: Fajr, Sunrise, Dhuhr, Asr, Maghrib, Isha, Midnight</li>
+<li><strong>Returns</strong>: Object with formatted times (e.g., "5:30 AM")</li>
+</ul>
 <h4><code>getTimeUntilNextPrayer(timings)</code></h4>
-<p>Calculates which prayer comes next and how much time remains.
-- Compares current time with all prayer times
-- Handles day rollover (if no prayers remain today, next is Fajr tomorrow)
-- <strong>Returns</strong>: Object with <code>prayer</code> name, <code>hours</code>, and <code>minutes</code> until next prayer</p>
+<p>Calculates which prayer comes next and how much time remains.</p>
+<ul>
+<li>Compares current time with all prayer times</li>
+<li>Handles day rollover (if no prayers remain today, next is Fajr tomorrow)</li>
+<li><strong>Returns</strong>: Object with <code>prayer</code> name, <code>hours</code>, and <code>minutes</code> until next prayer</li>
+</ul>
 <h3>Network &amp; Data</h3>
 <h4><code>hasGoodInternet(timeoutSeconds = 2)</code></h4>
-<p>Async function that tests internet connectivity by pinging Google's connectivity check server.
-- <strong>Default timeout</strong>: 2 seconds
-- <strong>Returns</strong>: <code>true</code> if connected, <code>false</code> if offline or timeout</p>
+<p>Async function that tests internet connectivity by pinging Google's connectivity check server.</p>
+<ul>
+<li><strong>Default timeout</strong>: 2 seconds</li>
+<li><strong>Returns</strong>: <code>true</code> if connected, <code>false</code> if offline or timeout</li>
+</ul>
 <h3>Data Flow</h3>
 <ol>
 <li><strong>Internet Check</strong>: Tests connectivity with <code>hasGoodInternet()</code></li>
-<li><strong>Online Path</strong>:</li>
+<li><strong>Online Path</strong>:<ul>
 <li>Gets current location using <code>Location.current()</code></li>
 <li>Formats today's date as DD-MM-YYYY</li>
 <li>Calls Aladhan API: <code>https://api.aladhan.com/v1/timings/{date}?latitude={lat}&amp;longitude={lon}</code></li>
 <li>Saves response to local file: <code>prayer_timings.json</code></li>
-<li><strong>Offline Path</strong>:</li>
+</ul>
+</li>
+<li><strong>Offline Path</strong>:<ul>
 <li>Retrieves cached <code>prayer_timings.json</code> from Scriptable's documents folder</li>
 <li>Uses cached data if available; shows error message if not</li>
+</ul>
+</li>
 </ol>
 <h2>API Integration</h2>
-<p><strong>Service</strong>: Aladhan Prayer Times API (v1)
-- <strong>Endpoint</strong>: <code>https://api.aladhan.com/v1/timings/{date}</code>
-- <strong>Parameters</strong>: 
-  - <code>date</code>: DD-MM-YYYY format
-  - <code>latitude</code>: Device latitude
-  - <code>longitude</code>: Device longitude
-- <strong>Response</strong>: JSON with prayer times for the specified date and location</p>
+<p><strong>Service</strong>: Aladhan Prayer Times API (v1)</p>
+<ul>
+<li><strong>Endpoint</strong>: <code>https://api.aladhan.com/v1/timings/{date}?latitude=${latitude}&amp;longitude=${longitude}</code></li>
+<li><strong>Parameters</strong>: <ul>
+<li><code>date</code>: DD-MM-YYYY format</li>
+<li><code>latitude</code>: Device latitude</li>
+<li><code>longitude</code>: Device longitude</li>
+</ul>
+</li>
+</ul>
 <h2>File Storage</h2>
 <ul>
 <li><strong>Cache Location</strong>: Scriptable's local documents folder</li>
